# turboquant-serve

./: README.md  compare.py  pyproject.toml  serve.py  setup.py  turboquant_demo.ipynb
.github/workflows/: publish.yml
bench/: longcontext.py
tests/: test_quant.py
turboquant/: __init__.py  cache.py  codebook.py  quantizer.py  utils.py
turboquant/static/: index.html
turboquant_serve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
